# gsplat

./: .gitignore  gsplat.md  setup.py
demo/: Classical_Solver.py  CostFactor.py  classical_solver_example.py  solver_performance.py
demo/Environment/: Base.py  CostFactor.py
demo/Introduction-to-Gaussian-Splatting/: main.py
demo/script/: classical_solver_example.py  solver_performance.py  test.py
demo_nls/Environment/: Base.py  Classical_Solver.py  CostFactor.py  LMoptimizer.py
demo_nls/Introduction-to-Gaussian-Splatting/: 1D_approximation_with_gaussians.ipynb  1D_approximation_with_gaussians.py  2D_Gaussian_Splatting.ipynb  2D_Gaussian_Splatting.py  theseus_test.py
demo_nls/script/: classical_solver_example.py  solver_performance.py  test.py
examples/: benchmark.sh  requirements.txt  simple_trainer.py  simple_viewer.py  trainer_jacobian.ipynb  trainer_jacobian.py  trainer_new.py  utils.py
examples/datasets/: colmap.py  data_reader.py  downsample.py
gsplat/: LMoptimizer.py  _helper.py  adahessian.py  rendering.py
gsplat/cuda/: _backend.py  _torch_impl.py  _wrapper.py
gsplat/cuda/csrc/: CMakeLists.txt  bindings.h  ext.cpp  fully_fused_projection_bwd.cu  fully_fused_projection_fwd.cu  fully_fused_projection_packed_fwd.cu  isect_tiles.cu  jacobian_from_residual.cu  jacobians_from_residual.cu  main.cpp  rasterize_to_indices_in_range.cu  rasterize_to_pixels_bwd.cu  rasterize_to_pixels_fwd.cu  sparse_solver.cpp  sparse_solver.cu  spherical_harmonics.cuh  types.cuh  utils.cuh  world_to_cam_fwd.cu
gsplat/cuda/csrc/test/: testLM.cpp  testSparse_solver.cpp
gsplat/cuda_legacy/csrc/: CMakeLists.txt
tests/: test_LM.py
